src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__sudo__h_i.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"sudo -h -i ls\")?"
---
sudo -h -i ls

0   4   `sudo`  CALLABLE `sudo`
4   6   ` -`    punctuation.definition.parameter
6   7   `h`     variable.parameter.option
7   9   ` -`    punctuation.definition.parameter
9   10  `i`     variable.parameter.option
11  13  `ls`    CALLABLE `ls`
