src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__sudo__n.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"sudo -n ls\")?"
---
sudo -n ls

0  4   `sudo`  CALLABLE `sudo`
4  6   ` -`    punctuation.definition.parameter
6  7   `n`     variable.parameter.option
8  10  `ls`    CALLABLE `ls`
