src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__sudo__simple.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"sudo ls\")?"
---
sudo ls

0  4  `sudo`  CALLABLE `sudo`
5  7  `ls`    CALLABLE `ls`
