src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__sudo__version_help.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"sudo --version && sudo --help\")?"
---
sudo --version && sudo --help

0   4   `sudo`     CALLABLE `sudo`
4   7   ` --`      punctuation.definition.parameter
7   14  `version`  variable.parameter.option
15  17  `&&`       keyword.operator.logical.and
18  22  `sudo`     CALLABLE `sudo`
22  25  ` --`      punctuation.definition.parameter
25  29  `help`     variable.parameter.option
